namespace Gameplay.Controls.Collectable
{
    public enum CollectableType
    {
        Energy,
        SpecialAttack,
        Life
    }
}